...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/remindersListView"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="22dp"
            app:layout_constraintBottom_toTopOf="@+id/renameList"
            app:layout_constraintEnd_toEndOf="parent"
...
            android:layout_marginTop="15dp"
            android:fontFamily="monospace"
            android:text="ADD REMINDER"
            android:textSize="16sp"
            app:cornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/withinReminderHeader" />

        <TextView
            android:id="@+id/withinReminderHeader"
            android:layout_width="412dp"
            android:layout_height="80dp"
            android:background="#33BC9C"
...
