...
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/addNewButton"
        android:layout_width="169dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="monospace"
        android:text="ADD REMINDER"
...
